--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
   </head>
 
   <body class="bg-light">
-
-    <div class="banner-wrap vh-100 vh-100 text-white">
+    <header class="px-5 p-3 text-white fixed-top scrolling">
+      <div>
+        <h3 class="float-md-start text-center">portfolio</h3>
+        <nav class="nav nav-masthead justify-content-center float-md-end">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#About-me">About</a>
+          <a class="nav-link" href="#Projects">Projects</a>
+          <a class="nav-link" href="#Contact">Contact</a>
+        </nav>
+      </div>
+    </header>
+    <div class="banner-wrap vh-100 vh-100 d-flex align-items-center justify-content-center text-white">
       <div class="overlay"></div>
-      <header class="px-5 p-3 text-white">
-        <div>
-          <h3 class="float-md-start text-center">portfolio</h3>
-          <nav class="nav nav-masthead justify-content-center float-md-end">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Contact</a>
-          </nav>
-        </div>
-      </header>
-      <main class="d-flex flex-column align-items-center justify-content-center h-75 text-center">
+      <main class="text-center">
         <h1 class="display-1">I am Nompumelelo Xhorile</h1>
-        <p class="lead">Fullstack Developer</p>
+        <span id="typed" class="lead"></span>
       </main>
  
     </div>
-    <section>
+    <section id="About-me">
      <div class="container p-5">
       <div class="card">
          <div class="card-body">
@@ -82,7 +82,7 @@
       </div>
      </div>
     </section>
-    <section>
+    <section id="Projects">
       <div class="container p-5">
         <h1 class="text-center"><mark>Projects</mark></h1>
         <div class="row">
@@ -112,7 +112,7 @@
                 <h5 class="card-title">YouTube Clone home page</h5>
                 <p class="card-text">Built this with HTML & CSS.</p>
                 <a href="https://nompumelelo-youtube-clone.netlify.app/" target="_blank" class="btn btn-primary">View Website</a>
-                <a href="https://github.com/Mpumixhorile/zaio-git-youtube" target="_blank" class="btn btn-primary">View Code</a>
+                <a href="https://github.com/Mpumixhorile/zaio-git-youtube" target="_blank" class="btn btn-outline-dark"><i class="bi bi-code-slash"></i></a>
               </div>
             </div>
           </div>
@@ -127,7 +127,7 @@
                 <h5 class="card-title">Tesla Landing Page</h5>
                 <p class="card-text">Built this with HTML & CSS.</p>
                 <a href="https://roaring-malasada-d72aca.netlify.app/" target="_blank" class="btn btn-primary">View Website</a>
-                <a href="https://github.com/Mpumixhorile/zaio-git-tesla" target="_blank" class="btn btn-primary">View Code</a>
+                <a href="https://github.com/Mpumixhorile/zaio-git-tesla" target="_blank" class="btn btn-outline-dark"><i class="bi bi-code-slash"></i></a>
               </div>
             </div>
           </div>
@@ -142,7 +142,7 @@
                 <h5 class="card-title">Twitter Home Page</h5>
                 <p class="card-text">Built this with HTML & CSS.</p>
                 <a href="https://magnificent-longma-b89372.netlify.app/" target="_blank" class="btn btn-primary">View Website</a>
-                <a href="https://github.com/Mpumixhorile/zaio-git-twitter-clone" target="_blank" class="btn btn-primary">View Code</a>
+                <a href="https://github.com/Mpumixhorile/zaio-git-twitter-clone" target="_blank" class="btn btn-outline-dark"><i class="bi bi-code-slash"></i></a>
               </div>
             </div>
           </div>
@@ -151,7 +151,7 @@
       </div>
     </section>
 
-    <section>
+    <section id="Contact">
       <div class="container p-5">
        <div class="card p-3">
           <div class="card-body px-5 text-center">
@@ -203,6 +203,28 @@
       </div>
      </section>
 
+     <footer class="bg-dark text-center text-white">
+      <div class="container p-3">
+        <p>Developed By Nompumelelo Xhorile using Bootstrap</p>
+      </div>
+     </footer>
 
-  </body>
+     <script>
+      window.addEventListener("scroll", () => {
+        const header = document.querySelector("header");
+        header.classList.toggle("scrolling", window.scrollY > 0);
+      });
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script>
+      var typed = new Typed('#typed', {
+        strings: ['Fullstack Developer.',],
+        loop: true,
+        typespeed: 80,
+        shuffle: true,
+      });
+    </script>
+
+</body>
 </html>
